--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         <li><a href="https://libguides.uwf.edu/c.php?g=848362&p=6073747"> <i class="fab fa-internet-explorer"></i> Standard abbreviations used in the IEEE Reference list</a></li>
         <li><a href="./resources/IEEE-Editorial-Style-Manual-2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> IEEE Editorial Style Manual (2021)</a></li>
         <li><a href="./resources/LATEX-Mathematical-Symbols.pdf"> <i class="fab fa fa-file-pdf-o"></i> LaTeX Mathematical Symbols</a></li>
+        <li><a href="./resources/Typesetting-Subtleties-Prof-Vivek-Goyal.pdf"> <i class="fab fa fa-file-pdf-o"></i> Typesetting Subtleties by Prof. Vivek Goyal</a></li>
         <li><a href="./resources/Markdown_Mathematics.pdf"> <i class="fab fa fa-file-pdf-o"></i> Writing Mathematical Formulas in Markdown</a></li>
         <li><a href="./resources/JCR_2021.pdf"> <i class="fab fa fa-file-pdf-o"></i> InCites Journal Citation Reports (2021)</a></li>
         <li><a href="./resources/中国计算机学会CCF推荐国际学术会议和期刊目录_2019.pdf"> <i class="fab fa fa-file-pdf-o"></i> 中国计算机学会推荐国际学术会议和期刊目录 (2019)</a></li>
@@ -219,6 +220,7 @@
         <li><a href="./resources/Research_Life.pdf"> <i class="fab fa fa-file-pdf-o"></i> 文章千古事, 得失寸心知 by Prof. Song-Chun Zhu</a></li>
         <li><a href="./resources/Statement_of_Purpose-Kai-Fu-LEE-CMU.pdf"> <i class="fab fa fa-file-pdf-o"></i> Statement of Purpose by Dr. Kai-Fu Lee</a></li>
         <li><a href="./resources/AI-Dartmouth-College-1956.pdf"> <i class="fab fa fa-file-pdf-o"></i> Dartmouth Summer Project on Artificial Intelligence (1956)</a></li>
+        <li><a href="./resources/The_Summer_Vision_Project_1966.pdf"> <i class="fab fa fa-file-pdf-o"></i> The Summer Vision Project at MIT (1966)</a></li>
         <li><a href="./resources/Turing-Test-1950.pdf"> <i class="fab fa fa-file-pdf-o"></i> Turing Test (1950) by Alan Mathison Turing</a></li>
         <li><a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html"> <i class="fab fa-internet-explorer"></i> The Bitter Lesson from 70 years of AI research by Richard Sutton</a></li>
         <li><a href="./resources/AI创业江湖里的师徒帮.pdf"> <i class="fab fa fa-file-pdf-o"></i> AI创业江湖里的师徒帮</a></li>
