--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>May 2024</strong> 𝗣𝗵.𝗗. 𝗖𝗮𝗻𝗱𝗶𝗱𝗮𝗰𝘆 𝗥𝗲𝗽𝗼𝗿𝘁: <a href="./files/PhD_Candidacy/PhD_Candidacy_Report_Shuyue_Jia_May_2024.pdf">Preference Alignment via Reinforcement Learning from Human Feedback</a> and 𝗣𝗿𝗲𝘀𝗲𝗻𝘁𝗮𝘁𝗶𝗼𝗻: <a href="./files/PhD_Candidacy/PhD_Candidacy_Presentation_Shuyue_Jia_May_2024.pdf">Slides</a>.
+  </li>
+  <li>
     <strong>Jan 2024</strong> 🔥 We are releasing <a href="https://huggingface.co/datasets/shuyuej/GSM8K-Consistency">&#129303;&#32;GSM8K-Consistency</a>, a benchmark database for analyzing the consistency of Arithmetic Reasoning on GSM8K.
   </li>
   <li>
