Update Reviewer Experience

--- a/index.html
+++ b/index.html
@@ -588,23 +588,6 @@
   </li>
 </ol>
 
-<!--<h3 id="Generative AI"><font color="black">Topic 1 - </font><font color="#DE3163">Generative AI</font></h3>-->
-<!--<ol>-->
-<!--  <li>-->
-<!--<div style="float:left;">-->
-<!--  <font color="#00066f">MedSyn: Text-guided Anatomy-aware Synthesis of High-Fidelity 3D CT Images</font>-->
-<!--</div>-->
-<!--<div style="float:right;">-->
-<!--  <a href="https://github.com/batmanlab/MedSyn"><i class="fa fa-github"></i> Codes</a>-->
-<!--  <a href="https://arxiv.org/pdf/2310.03559.pdf"><i class="fab fa fa-file-pdf-o"></i> Paper</a>-->
-<!--</div><br>-->
-<!--Yanwu Xu, Li Sun, Wei Peng, <strong>Shuyue Jia</strong>, Katelyn Morrison, Shyam Visweswaran, Motahhare Eslami, and Kayhan Batmanghelich    -->
-<!--<br><em>IEEE Transactions on Medical Imaging</em> (IEEE T-MI)-->
-<!--  </li>-->
-<!--</ol>-->
-<!--  -->
-<!--<hr>-->
-
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
   <li><strong>Reviewer</strong> of<br>
@@ -614,11 +597,7 @@
     IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)<br>
     IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)<br>
     IEEE MultiMedia<br>
-    IEEE Sensors Journal<br>
-    Postharvest Biology and Technology<br>
-    Scientific Reports<br>
-    Energy Reports<br>
-    Analytical Methods
+    IEEE Sensors Journal
   </li>
   <li><strong>Member</strong> of IEEE, ACM, ACL, AAAI, and AAAS</li>
 </ol>
