--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>June 2024</strong> Our AI Platform <a href="https://medpodgpt.org/"> MedPodGPT</a> is available to authorized users. It is an online platform for deploying our latest multimodal foundation models for medical and clinical applications.
+  </li>
+  <li>
     <strong>June 2024</strong> Our paper <a href="https://ieeexplore.ieee.org/document/10566053"> MedSyn</a> is accepted by <em>IEEE T-MI</em>.
   </li>
   <li>
