--- a/index.html
+++ b/index.html
@@ -272,7 +272,10 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
-    <strong>June 2024</strong> Our AI Platform <a href="https://medpodgpt.org/"> MedPodGPT</a> is available to authorized users. It is an online platform for deploying our latest multimodal foundation models for medical and clinical applications.
+    <strong>July 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1"> MedPodGPT preprint</a> is available online! It is an audio-augmented large language model (LLM) for medical research and education.
+  </li>
+  <li>
+    <strong>June 2024</strong> Our AI Platform <a href="https://medpodgpt.org/"> MedPodGPT</a> is available to edu and org email users. It is an online platform for deploying our latest multimodal foundation models for medical and clinical applications. Our model checkpoints are updated on a daily basis.
   </li>
   <li>
     <strong>June 2024</strong> Our paper <a href="https://ieeexplore.ieee.org/document/10566053"> MedSyn</a> is accepted by <em>IEEE T-MI</em>.
