--- a/index.html
+++ b/index.html
@@ -274,12 +274,12 @@
   <li>
     <strong>July 2024</strong> Open Source <a href="https://github.com/vkola-lab/medpodgpt"> MedPodGPT Library</a>, a library for benchmarking multilingual medical Large Language Models (Medical LLMs)
     <iframe
-      src="https://img.shields.io/github/stars/vkola-lab/medpodgpt?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      src="https://img.shields.io/github/stars/vkola-lab/medpodgpt" 
+      frameborder="0" scrolling="0" width="80px" height="20px">
     </iframe>
     <iframe
-      src="https://img.shields.io/github/forks/vkola-lab/medpodgpt?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      src="https://img.shields.io/github/forks/vkola-lab/medpodgpt" 
+      frameborder="0" scrolling="0" width="80px" height="20px">
     </iframe>.
   </li>
   <li>
