--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
   Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>
   
   <br>
-  <!--  <a href="./files/resume/Curriculum_Vitae_Shuyue_JIA.pdf"><i class="fab fa fa-file-pdf-o"></i>&#32;Resume</a>-->
   <a href="https://www.strava.com/athletes/shuyuej"><i class='fab fa-strava' style='font-size:25px;color:red'></i>&#32;Strava</a>
   <a href="https://scholar.google.com/citations?user=PfpEP60AAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-1x"></i>&#32;Scholar</a>
   <a href="https://huggingface.co/shuyuej">&#129303;&#32;HuggingFace</a>
@@ -272,10 +271,13 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Aug 2024</strong> Release and maintain a collection of <a href="https://huggingface.co/collections/shuyuej/quantization-669ea25d2ea444924e543da2"> &#129303;&#32; Quantized Large Language Models</a> for public usage, offering AI solutions with reduced computational requirements.
+  </li>
+  <li>
     <strong>July 2024</strong> Open Source <a href="https://github.com/vkola-lab/medpodgpt"> MedPodGPT Library</a>, a library for benchmarking multilingual medical Large Language Models (Medical LLMs)
     <iframe
       src="https://img.shields.io/github/stars/vkola-lab/medpodgpt" 
-      frameborder="0" scrolling="0" width="80px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/vkola-lab/medpodgpt" 
