--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <p>
-  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu/">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team/" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>, and B.Eng. degree (2020) in Intelligence Science and Technology from <a href="http://www.neepu.edu.cn/">Northeast Electric Power University</a>, supervised by <a href="https://ieeexplore.ieee.org/author/37290052900" style="color:black;">Prof. Yimin Hou</a> and <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/jinglei-lv.html" style="color:black;">Prof. Jinglei Lv</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>.
+  I am a Ph.D. student in Computer Engineering at <a href="https://www.bu.edu/">Boston University</a>, under the supervision of <a href="https://vkola-lab.github.io/team/" style="color:black;">Prof. Vijaya Kolachalama</a>. Prior to BU, I received my M.Phil. degree (2023) in Computer Science from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, supervised by <a href="https://www.cs.cityu.edu.hk/~shiqwang/" style="color:black;">Prof. Shiqi Wang</a>. In 2017, I attended a summer school at <a href="https://uci.edu/">University of California, Irvine</a>.
   
   <br>
   <br>
@@ -288,7 +288,7 @@
     <strong>July 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1"> MedPodGPT preprint</a> is available online! It is an audio-augmented large language model (LLM) for medical research and education.
   </li>
   <li>
-    <strong>June 2024</strong> Our AI Platform <a href="https://medpodgpt.org/"> MedPodGPT</a> is available to edu and org email users. It is an online platform for deploying our latest multimodal foundation models for medical and clinical applications. Our model checkpoints are updated on a daily basis.
+    <strong>June 2024</strong> Our AI Platform, <a href="https://medpodgpt.org/"> MedPodGPT</a>, is now accessible to the general public. It is an online platform for deploying our latest multimodal foundation models for medical and clinical applications. The model checkpoints are continuously updated on a daily basis.
   </li>
   <li>
     <strong>June 2024</strong> Our paper <a href="https://ieeexplore.ieee.org/document/10566053"> MedSyn</a> is accepted by <em>IEEE T-MI</em>.
