--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
     </div>
     <div style="float:right;">
       <a href="https://github.com/batmanlab/MedSyn"><i class="fa fa-github"></i> Codes</a>
-      <a href="https://arxiv.org/pdf/2310.03559.pdf"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+      <a href="https://ieeexplore.ieee.org/document/10566053"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
-    Yanwu Xu, Li Sun, Wei Peng, <strong>Shuyue Jia</strong>, Katelyn Morrison, Shyam Visweswaran, Motahhare Eslami, and Kayhan Batmanghelich
+    Yanwu Xu, Li Sun, Wei Peng, <strong>Shuyue Jia</strong>, Katelyn Morrison, Adam Perer, Afrooz Zandifar, Shyam Visweswaran, Motahhare Eslami, Kayhan Batmanghelich
     <br><em>IEEE Transactions on Medical Imaging</em> (IEEE T-MI)
   </li>
 </ol>
