--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
         <li><a href="./resources/上海交通大学学生生存手册.pdf"> <i class="fab fa fa-file-pdf-o"></i> 上海交通大学学生生存手册</a></li>
         <li><a href="https://linshanlee.com/"> <i class="fab fa-internet-explorer"></i> 李琳山教授个人数位典藏</a></li>
         <li><a href="https://www.youtube.com/watch?v=ji5_MqicxSo"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Randy Pausch Last Lecture: Achieving Your Childhood Dreams</a></li>
+  </details>
+  <details>
+    <summary style="outline:none">Contact</summary>
+    <p><font color="#9933CC">𝗖𝗼𝗻𝘁𝗮𝗰𝘁</font></p>
+    Shuyue Jia (Bruce Jia)<br>
+    Department of ECE, Boston University<br>
+    Add: 15/F, Center for Computing & Data Sciences,<br>
+    665 Commonwealth Ave., Boston, MA 02215<br>
+    Tel: 6176851479<br>
+    Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>; <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a><br>
     
     <p><font color="#9933CC">𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗧𝗲𝗮𝗺</font></p>
     <div class="profile-container">
@@ -252,12 +262,11 @@
       <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
       <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Spring)</p>
     </div>
-
   </details>
   
   <br>
   
-  Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>
+  Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>; <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>
   
   <br>
   <a href="https://www.strava.com/athletes/shuyuej"><i class='fab fa-strava' style='font-size:25px;color:red'></i>&#32;Strava</a>
