--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 
       <p><font color="#9933CC">𝐄𝐱𝐜𝐞𝐥𝐥𝐞𝐧𝐭 𝐏𝐫𝐞𝐬𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧</font></p>
         <li><a href="./resources/PowerPoint/On%20the%20inductive%20bias%20of%20language%20modeling.pptx"> <i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i> On the Inductive Bias of Language Modeling</a> | <a href="https://youtu.be/PNTbvoweqBk?t=3046"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Oral Presentation (Tatsunori B. Hashimoto)</a></li>
-        <li><a href="./resources/PowerPoint/智能制造优化调度及展望.pdf"> <i class="fa fa fa-book"></i> 智能制造优化调度及展望</a></li>
       
       <p><font color="#9933CC">𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐁𝐨𝐨𝐤𝐬</font></p>
-        <li><a href="https://drive.google.com/file/d/1URb3sEWJYFxTxElH4osoLwPt41Fmh1Tw/view?usp=sharing"> <i class="fab fa fa-book"></i> Foundation Models for Natural Language Processing Pre-trained Language Models Integrating Media (Gerhard Paaß and Sven Giesselbach)</a></li>
+        <li><a href="./books/Foundation-Models-for-Natural-Language-Processing.pdf"> <i class="fab fa fa-book"></i> Foundation Models for Natural Language Processing: Pre-trained Language Models Integrating Media (Gerhard Paaß and Sven Giesselbach)</a></li>
+        <li><a href="./books/The-Path-to-Artificial-General-Intelligence.pdf"> <i class="fab fa fa-book"></i> The Path to Artificial General Intelligence: Insights from Adversarial LLM Dialogue (Edward Y. Chang)</a></li>
         <li><a href="./books/Pattern%20Recognition%20and%20Machine%20Learning.pdf"> <i class="fab fa fa-book"></i> Pattern Recognition and Machine Learning (Christopher Bishop)</a></li>
         <li><a href="./books/Reinforcement%20Learning-%20An%20Introduction.pdf"> <i class="fab fa fa-book"></i> Reinforcement Learning: An Introduction (Richard S. Sutton and Andrew G. Barto)</a></li>
         <li><a href="./books/Digital%20Image%20Processing.pdf"> <i class="fab fa fa-book"></i> Digital Image Processing (Rafael C. Gonzalez and Richard E. Woods)</a></li>
