--- a/index.html
+++ b/index.html
@@ -803,6 +803,7 @@
 </body>
 
 <footer style="text-align:center">
+  <a style="font-family: 'STKaiti'; font-size: 20px; display: block; margin-bottom: 2px; color: black;text-decoration: none;">文章千古事，得失寸心知。</a>
   𝙁𝙞𝙣𝙙 𝙩𝙝𝙚 𝙘𝙤𝙪𝙧𝙖𝙜𝙚 𝙩𝙤 𝙗𝙚𝙮𝙤𝙣𝙙 𝙗𝙤𝙪𝙣𝙙𝙖𝙧𝙞𝙚𝙨!<br>
   <span>𝙲𝚘𝚙𝚢𝚛𝚒𝚐𝚑𝚝 &copy;2020 ℬ𝓇𝓊𝒸𝑒 𝒮. 𝒥𝒾𝒶</span>
 </footer>
