--- a/index.html
+++ b/index.html
@@ -289,6 +289,17 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Aug 2024</strong> Open Source and Keep Updating <a href="https://github.com/SuperBruceJia/Awesome-Large-Vision-Language-Model"> Awesome Large Vision-Language Model (LVLM/MM-LLM)</a>, a curated list of Large Vision-Language Model. Welcome to contribute and work together!
+    <iframe
+      src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Large-Vision-Language-Model?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>
+    <iframe
+      src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Large-Vision-Language-Model?style=social" 
+      frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>.
+  </li>
+  <li>
     <strong>Aug 2024</strong> Release and maintain a collection of <a href="https://huggingface.co/collections/shuyuej/quantization-669ea25d2ea444924e543da2"> &#129303;&#32; Quantized Large Language Models</a> for public usage, offering AI solutions with reduced computational requirements.
   </li>
   <li>
@@ -619,7 +630,7 @@
 </ol>
 
 <hr>
-  
+
 <h3 id="Intelligent Technologies"><font color="black">Topic 4 - </font><font color="#DE3163">Intelligent Technologies</font></h3>
 <ol>
   <li>
