--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     <p><font color="#9933CC">𝗖𝗼𝗻𝘁𝗮𝗰𝘁</font></p>
     Shuyue Jia (Bruce Jia)<br>
     Department of ECE, Boston University<br>
-    Add: 15/F, Center for Computing & Data Sciences,<br>
-    665 Commonwealth Ave., Boston, MA 02215<br>
+    Add: Kolachalama Lab, 14/F, Center for Computing & Data Sciences,<br>
+    Boston University, 665 Commonwealth Ave., Boston, MA 02215<br>
     Tel: 6176851479<br>
     Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>; <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a><br>
     
