Update Paper Review

--- a/index.html
+++ b/index.html
@@ -658,6 +658,7 @@
     IEEE Transactions on Industrial Informatics (IEEE T-II)<br>
     IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)<br>
     IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)<br>
+    IEEE Open Journal of the Computer Society (IEEE OJCS)<br>
     IEEE MultiMedia<br>
     IEEE Sensors Journal
   </li>
