Change MedPodGPT to PodGPT

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <br>
   <br>
   
-  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in challenging and exciting research and building practical and impactful applications:
-  <li>Evidence-based Medicine and Healthcare</li>
+  𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
+  <li>Evidence-based Medicine (EBM)</li>
   <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
   <li>Large Multimodal Models (LMMs)</li>
   <li>Retrieval-augmented Generation (RAG)</li>
@@ -295,13 +295,13 @@
     <strong>Aug 2024</strong> Release and maintain a collection of <a href="https://huggingface.co/collections/shuyuej/quantization-669ea25d2ea444924e543da2"> &#129303;&#32; Quantized Large Language Models</a> for public usage, offering AI solutions with reduced computational requirements.
   </li>
   <li>
-    <strong>July 2024</strong> Open Source <a href="https://github.com/vkola-lab/medpodgpt"> MedPodGPT Library</a>, a library for benchmarking multilingual medical Large Language Models (Medical LLMs)
+    <strong>July 2024</strong> Open Source <a href="https://github.com/vkola-lab/PodGPT"> PodGPT Library</a>, a library for benchmarking multilingual medical Large Language Models (Medical LLMs)
     <iframe
-      src="https://img.shields.io/github/stars/vkola-lab/medpodgpt" 
+      src="https://img.shields.io/github/stars/vkola-lab/PodGPT" 
       frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
-      src="https://img.shields.io/github/forks/vkola-lab/medpodgpt" 
+      src="https://img.shields.io/github/forks/vkola-lab/PodGPT" 
       frameborder="0" scrolling="0" width="80px" height="20px">
     </iframe>.
   </li>
@@ -309,7 +309,7 @@
     <strong>July 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1"> MedPodGPT preprint</a> is available online! It is an audio-augmented large language model (LLM) for medical research and education.
   </li>
   <li>
-    <strong>June 2024</strong> Our AI Platform, <a href="https://medpodgpt.org/"> MedPodGPT</a>, is now accessible to the general public. It is an online platform for deploying our latest multimodal foundation models for medical and clinical applications. The model checkpoints are continuously updated on a daily basis.
+    <strong>June 2024</strong> Our AI Platform, <a href="https://podgpt.org/"> PodGPT</a>, is now accessible to the general public. It is an online platform for deploying our latest multimodal foundation models for education and research.
   </li>
   <li>
     <strong>June 2024</strong> Our paper <a href="https://ieeexplore.ieee.org/document/10566053"> MedSyn</a> is accepted by <em>IEEE T-MI</em>.
