--- a/index.html
+++ b/index.html
@@ -288,6 +288,14 @@
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Large-Vision-Language-Model?style=social"
       frameborder="0" scrolling="0" width="90px" height="20px">
+    </iframe>, and <a href="https://github.com/SuperBruceJia/Awesome-Mixture-of-Experts"> Awesome Mixture of Experts (MoE)</a>, a curated list of Mixture of Experts (MoE) and Mixture of Multimodal Experts (MoME)
+    <iframe
+      src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Mixture-of-Experts?style=social"
+      frameborder="0" scrolling="0" width="80px" height="20px">
+    </iframe>
+    <iframe
+      src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Mixture-of-Experts?style=social"
+      frameborder="0" scrolling="0" width="90px" height="20px">
     </iframe>.
     Welcome to contribute and work together!
   </li>
