--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
-  <li>Evidence-based Medicine (EBM) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">Clinical Expertise</a>]</li>
-  <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">PodGPT</a>]</li>
+  <li>Evidence-based Medicine (EBM) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
+  <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
   <li>Large Multimodal Models (LMMs)</li>
   <li>Retrieval-augmented Generation (RAG)</li>
   <li>Generative AI [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
-  <li>Computer Vision [<a href="https://ieeexplore.ieee.org/document/9950035">Non-local Modeling</a>]</li>
+  <li>Computer Vision [<a href="https://ieeexplore.ieee.org/document/9950035">1</a>]</li>
   <li>AI4Science [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>, <a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">2</a>, <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6">3</a>]</li>
   
   <br>
