--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
-  <li>Evidence-based Medicine (EBM) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
+  <li>Multimodal Foundation Models for Medical and Clinical Applications</li>
   <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
-  <li>Large Multimodal Models (LMMs)</li>
   <li>Retrieval-augmented Generation (RAG)</li>
   <li>Generative AI [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
   <li>Computer Vision [<a href="https://ieeexplore.ieee.org/document/9950035">1</a>]</li>
@@ -279,6 +278,9 @@
 
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
+  <li>
+    <strong>Oct 2024</strong> We have launched <b>PodRAG</b> on our <a href="https://podgpt.org/">PodGPT</a> platform with the advanced 𝗥𝗲𝘁𝗿𝗶𝗲𝘃𝗮𝗹-𝗔𝘂𝗴𝗺𝗲𝗻𝘁𝗲𝗱 𝗚𝗲𝗻𝗲𝗿𝗮𝘁𝗶𝗼𝗻 (𝗥𝗔𝗚) techniques! It is designed to provide 𝘁𝗵𝗲 𝗺𝗼𝘀𝘁 𝗮𝗰𝗰𝘂𝗿𝗮𝘁𝗲 𝗮𝗻𝗱 𝘂𝗽-𝘁𝗼-𝗱𝗮𝘁𝗲 𝗶𝗻𝗳𝗼𝗿𝗺𝗮𝘁𝗶𝗼𝗻 for medical education and research! Please try it out if you are interested!
+  </li>
   <li>
     <strong>Aug 2024</strong> Open Source and Keep Updating <a href="https://github.com/SuperBruceJia/Awesome-Large-Vision-Language-Model"> Awesome Large Vision-Language Model (LVLM/MM-LLM)</a>, a curated list of Large Vision-Language Model
     <iframe
