--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
-  <li>Multimodal Foundation Models for Medical and Clinical Applications</li>
+  <li>Multimodal Foundation Models for Medical Applications</li>
   <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
   <li>Retrieval-augmented Generation (RAG)</li>
   <li>Generative AI [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
