--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <br>
   
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
-  <li>Multimodal Foundation Models for Medical Applications</li>
+  <li>Multimodal Large Language Models (MLLMs)</li>
   <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
   <li>Retrieval-augmented Generation (RAG)</li>
   <li>Generative AI [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
@@ -285,19 +285,19 @@
     <strong>Aug 2024</strong> Open Source and Keep Updating <a href="https://github.com/SuperBruceJia/Awesome-Large-Vision-Language-Model"> Awesome Large Vision-Language Model (LVLM/MM-LLM)</a>, a curated list of Large Vision-Language Model
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Large-Vision-Language-Model?style=social"
-      frameborder="0" scrolling="0" width="80px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Large-Vision-Language-Model?style=social"
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>, and <a href="https://github.com/SuperBruceJia/Awesome-Mixture-of-Experts"> Awesome Mixture of Experts (MoE)</a>, a curated list of Mixture of Experts (MoE) and Mixture of Multimodal Experts (MoME)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Mixture-of-Experts?style=social"
-      frameborder="0" scrolling="0" width="80px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Mixture-of-Experts?style=social"
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>.
     Welcome to contribute and work together!
   </li>
@@ -312,7 +312,7 @@
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/vkola-lab/PodGPT" 
-      frameborder="0" scrolling="0" width="80px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>.
   </li>
   <li>
@@ -334,22 +334,22 @@
     <strong>Dec 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/promptcraft"> 🔨 PromptCraft</a> and its published <a href="https://pypi.org/project/promptcraft"> PyPI Package</a>, a prompt perturbation toolkit from the character, word, and sentence levels for prompt robustness analysis
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/promptcraft?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/promptcraft?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>.
   </li>
   <li>
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-Semantic-Textual-Similarity"> Awesome Semantic Textual Similarity</a>, a curated list of Semantic/Sentence Textual Similarity (STS) in Large Language Models (LLMs) and Natural Language Processing (NLP)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-Semantic-Textual-Similarity?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>.
   </li>
   <li>
@@ -359,11 +359,11 @@
     <strong>Oct 2023</strong> Open Source <a href="https://github.com/SuperBruceJia/Awesome-LLM-Self-Consistency"> Awesome LLM Self-Consistency</a>, a curated paper and presentation list of self-consistency in Large Language Models (LLMs)
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/Awesome-LLM-Self-Consistency?style=social" 
-      frameborder="0" scrolling="0" width="90px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>.
   </li>
   <li>
@@ -405,11 +405,11 @@
     <strong>Aug 2022</strong> Our paper <a href="https://ieeexplore.ieee.org/abstract/document/9950035"> NLNet</a> is accepted by <em>IEEE MMSP</em>. Source codes are available on <a href="https://github.com/SuperBruceJia/NLNet-IQA">&#32;GitHub</a>
     <iframe
       src="https://img.shields.io/github/stars/SuperBruceJia/NLNet-IQA?style=social"
-      frameborder="0" scrolling="0" width="85px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>
     <iframe
       src="https://img.shields.io/github/forks/SuperBruceJia/NLNet-IQA?style=social"
-      frameborder="0" scrolling="0" width="85px" height="20px">
+      frameborder="0" scrolling="0" width="82px" height="20px">
     </iframe>, and the trained models are available on <a href="https://huggingface.co/shuyuej/NLNet">&#129303;&#32;HuggingFace</a> for real-life IQA inference.
   </li>
   <li>
@@ -662,7 +662,7 @@
 
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
-  <li><strong>Reviewer</strong> of<br>
+  <li><strong>Journal Reviewer</strong> of<br>
     IEEE Transactions on Multimedia (IEEE T-MM)<br>
     IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT)<br>
     IEEE Transactions on Neural Networks and Learning Systems (IEEE T-NNLS)<br>
@@ -670,8 +670,12 @@
     IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)<br>
     IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)<br>
     IEEE Open Journal of the Computer Society (IEEE OJCS)<br>
-    IEEE MultiMedia<br>
-    IEEE Sensors Journal
+    IEEE MultiMedia (MM)<br>
+    IEEE Sensors Journal<br>
+    Journal of Medical Internet Research
+  </li>
+  <li><strong>Conference Reviewer</strong> of<br>
+    The International Conference on Learning Representations (ICLR) 2025
   </li>
   <li><strong>Committee Member</strong> of Local Conference Committee, IEEE Boston Section</li>
   <li><strong>Member</strong> of IEEE, ACM, ACL, AAAI, and AAAS</li>
