--- a/index.html
+++ b/index.html
@@ -261,6 +261,11 @@
       <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
       <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Spring)</p>
     </div>
+    <div class="profile-container">
+      <img width="99%device-width" src="./imgs/team/Research_at_BU_2024_Fall.jpg" /><br><br>
+      <p class="image-description">Our Labmates @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
+      <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Fall)</p>
+    </div>
   </details>
   
   <br>
