--- a/index.html
+++ b/index.html
@@ -789,6 +789,25 @@
   <li>
     <div style="float:left;">
       <font color="black">
+        2024 Boston Half
+      </font>
+    </div>
+    
+    <br>
+    
+    <details>
+      <summary style="outline:none">01:43:13 (906 / 6524)</summary>
+      <div>
+        <div style="text-align:center">
+          <img width="99%device-width" src="./imgs/marathon2024.png" alt="marathon2024">
+        </div>
+      </div>
+    </details>
+  </li>
+  
+  <li>
+    <div style="float:left;">
+      <font color="black">
         2021 Standard Chartered Hong Kong Marathon
       </font>
     </div>
