--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀: In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
   <li>Multimodal Large Language Models (MLLMs)</li>
   <li>Large Language Models (LLMs) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1">1</a>]</li>
-  <li>Retrieval-augmented Generation (RAG)</li>
+  <li>Retrieval-augmented Generation (RAG) [<a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2">1</a>]</li>
   <li>Generative AI [<a href="https://ieeexplore.ieee.org/document/10566053">1</a>]</li>
   <li>Computer Vision [<a href="https://ieeexplore.ieee.org/document/9950035">1</a>]</li>
   <li>AI4Science [<a href="https://ieeexplore.ieee.org/document/9889159">1</a>, <a href="https://www.frontiersin.org/journals/bioengineering-and-biotechnology/articles/10.3389/fbioe.2021.706229/full">2</a>, <a href="https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6">3</a>]</li>
@@ -284,6 +284,9 @@
 <h2 id="news">News</h2>
 <ul style="list-style:none; margin:0; padding:0">
   <li>
+    <strong>Nov 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2"> PodGPT preprint</a> is available online! It is an audio-augmented Large Language Model (LLM) for STEMM research and education.
+  </li>
+  <li>
     <strong>Oct 2024</strong> We have launched <b>PodRAG</b> on our <a href="https://podgpt.org/">PodGPT</a> platform with the advanced 𝗥𝗲𝘁𝗿𝗶𝗲𝘃𝗮𝗹-𝗔𝘂𝗴𝗺𝗲𝗻𝘁𝗲𝗱 𝗚𝗲𝗻𝗲𝗿𝗮𝘁𝗶𝗼𝗻 (𝗥𝗔𝗚) techniques! It is designed to provide 𝘁𝗵𝗲 𝗺𝗼𝘀𝘁 𝗮𝗰𝗰𝘂𝗿𝗮𝘁𝗲 𝗮𝗻𝗱 𝘂𝗽-𝘁𝗼-𝗱𝗮𝘁𝗲 𝗶𝗻𝗳𝗼𝗿𝗺𝗮𝘁𝗶𝗼𝗻 for medical education and research! Please try it out if you are interested!
   </li>
   <li>
@@ -321,7 +324,7 @@
     </iframe>.
   </li>
   <li>
-    <strong>July 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1"> MedPodGPT preprint</a> is available online! It is an audio-augmented large language model (LLM) for medical research and education.
+    <strong>July 2024</strong> Our <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1"> MedPodGPT preprint</a> is available online! It is an audio-augmented Large Language Model (LLM) for medical research and education.
   </li>
   <li>
     <strong>June 2024</strong> Our AI Platform, <a href="https://podgpt.org/"> PodGPT</a>, is now accessible to the general public. It is an online platform for deploying our latest multimodal foundation models for education and research.
@@ -447,6 +450,21 @@
 <h2 id="publications">Publications</h2>
 <h3 id="Generative AI"><font color="black">Topic 1 - </font><font color="#DE3163">Generative AI and Foundation Models</font></h3>
 <ol>
+  <li>
+    <div style="float:left;">
+      <font color="#00066f">PodGPT: An Audio-augmented Large Language Model for Research and Education</font>
+    </div>
+    <div style="float:right;">
+      <a href="https://medpodgpt.org"><i class="fa fa-codepen"></i> Product</a>
+      <a href="https://github.com/vkola-lab/podgpt"><i class="fa fa-github"></i> Codes</a>
+      <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
+    </div><br>
+    <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Meagan V. Lauber, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
+    <br><em>medRxiv Preprint</em>
+  </li>
+  
+  <hr>
+  
   <li>
     <div style="float:left;">
       <font color="#00066f">MedPodGPT: A Multilingual Audio-augmented Large Language Model for Medical Research and Education</font>
