--- a/index.html
+++ b/index.html
@@ -461,6 +461,17 @@
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Meagan V. Lauber, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
     <br><em>medRxiv Preprint</em>
+    <details>
+      <summary style="outline:none">See More</summary>
+      <ul>
+        <div>
+          <div style="text-align:center">
+            <img width="99%device-width" src="imgs/PodGPT/PodGPT.png" alt="PodGPT Project">
+          </div>
+        </div>
+        Here, we introduce PodGPT, an audio-augmented large language model (LLM) tailored for research and education. The process began by leveraging publicly available generative AI auto-regressive language models across various scales. These models underwent continuous pre-training on a curated dataset of English CC-BY podcasts produced by scientific journals and clinical experts, as well as content from <em>The New England Journal of Medicine</em> (NEJM). The podcast corpus comprised over 3,700 hours of audio, covering diverse topics in science, research, and medicine, visually summarized in the accompanying word cloud. The next phase involved developing the software infrastructure, which included an inference engine for model deployment, a messaging queue, database integration, retrieval augmented generation (RAG) implementation, API microservices, and a responsive human-machine interface. This highly performant and robust system enabled users with internet access to engage seamlessly with current research and educational material via an adaptive chatbot. The chatbot supported multi-turn conversations across various languages, empowering users to access and interact with STEMM knowledge in a dynamic and accessible manner.
+      </ul>
+    </details>
   </li>
   
   <hr>
@@ -476,6 +487,17 @@
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Meagan V. Lauber, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
     <br><em>medRxiv Preprint</em>
+    <details>
+      <summary style="outline:none">See More</summary>
+      <ul>
+        <div>
+          <div style="text-align:center">
+            <img width="99%device-width" src="imgs/PodGPT/MedPodGPT.png" alt="MedPodGPT Project">
+          </div>
+        </div>
+        Here, we introduce MedPodGPT, an audio-augmented large language model (LLM) designed for medical research and education. Medical podcasts offer audio content rich in specialized terminology, diverse medical topics, and expert dialogues, helping the medical community stay current with the latest information. Integrating this content into LLMs can enhance their ability to provide up-to-date clinical information.
+      </ul>
+    </details>
   </li>
   
   <hr>
