--- a/index.html
+++ b/index.html
@@ -263,8 +263,18 @@
     </div>
     <div class="profile-container">
       <img width="99%device-width" src="./imgs/team/Research_at_BU_2024_Fall.jpg" /><br><br>
-      <p class="image-description">Our Labmates @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
+      <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
       <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Fall)</p>
+    </div>
+    <div class="profile-container">
+      <img width="99%device-width" src="./imgs/team/Research_at_BU_2024_Winter_1.jpg" /><br><br>
+      <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
+      <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Winter)</p>
+    </div>
+    <div class="profile-container">
+      <img width="99%device-width" src="./imgs/team/Research_at_BU_2024_Winter_2.jpg" /><br><br>
+      <p class="image-description">Our Research Team @ <a href="https://vkola-lab.github.io/team/">Kolachalama Laboratory</a></p>
+      <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Winter)</p>
     </div>
   </details>
   
