--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
   <br>
   <br>
   
+  𝗢𝗽𝗲𝗻-𝘀𝗼𝘂𝗿𝗰𝗲 𝗣𝗿𝗼𝗷𝗲𝗰𝘁𝘀:<br>
+  Please visit and star our open-source project and comprehensive solution <a href="https://github.com/vkola-lab/PodGPT">PodGPT</a> on LLM text generation and <a href="https://github.com/vkola-lab/PodGPT/tree/main/rag_pipeline">PodRAG</a> on retrieval.
+  
+  <br>
+  <br>
+  
   𝗥𝗲𝘀𝗲𝗮𝗿𝗰𝗵 𝗜𝗻𝘁𝗲𝗿𝗲𝘀𝘁𝘀:<br>
   In my career life, I keep seeking for a sweet spot between engaging in exciting research and open-sourcing impactful software and AI systems:
   <li>Multimodal Large Language Models (MLLMs)</li>
