--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <li><a href="https://www.youtube.com/watch?v=ji5_MqicxSo"> <i class="fa fa-youtube-play" style="font-size:24px;color:red"></i> Randy Pausch Last Lecture: Achieving Your Childhood Dreams</a></li>
   </details>
   <details>
-    <summary style="outline:none">Contact</summary>
+    <summary style="outline:none">Contact and Our Team</summary>
     <p><font color="#9933CC">𝗖𝗼𝗻𝘁𝗮𝗰𝘁</font></p>
     Shuyue Jia (Bruce Jia)<br>
     Department of ECE, Boston University<br>
