--- a/index.html
+++ b/index.html
@@ -292,7 +292,11 @@
       <p class="image-description">BU Center for Computing & Data Sciences, Boston, MA (2024 Winter)</p>
     </div>
   </details>
-  
+  <details>
+    <summary style="outline:none">Personal Blogs</summary>
+    <li><a href="https://www.facebook.com/shuyuej/posts/pfbid02AZBS4QzZeN5hSBnxRZXp24jRuMWChJL1Joo4p1kQBLsC86u41TFzup882xLiUZSul"> <i class="fab fa-internet-explorer"></i> Three stories of my journey in America (2023-2024)</a></li>
+  </details>
+
   <br>
   
   Email: <a href="mailto:brucejia@bu.edu">brucejia@bu.edu</a>; <a href="mailto:shuyuej@ieee.org">shuyuej@ieee.org</a>
