--- a/index.html
+++ b/index.html
@@ -743,6 +743,7 @@
     IEEE Transactions on Multimedia (IEEE T-MM)<br>
     IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT)<br>
     IEEE Transactions on Neural Networks and Learning Systems (IEEE T-NNLS)<br>
+    IEEE Transactions on Medical Imaging (IEEE T-MI)<br>
     IEEE Transactions on Industrial Informatics (IEEE T-II)<br>
     IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)<br>
     IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)<br>
