--- a/index.html
+++ b/index.html
@@ -740,23 +740,31 @@
 <h2 id="Academic Services">Academic Services</h2>
 <ol>
   <li><strong>Journal Reviewer</strong> of<br>
-    IEEE Transactions on Multimedia (IEEE T-MM)<br>
-    IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT)<br>
-    IEEE Transactions on Neural Networks and Learning Systems (IEEE T-NNLS)<br>
-    IEEE Transactions on Medical Imaging (IEEE T-MI)<br>
-    IEEE Transactions on Industrial Informatics (IEEE T-II)<br>
-    IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)<br>
-    IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)<br>
-    IEEE Open Journal of the Computer Society (IEEE OJCS)<br>
-    IEEE MultiMedia (MM)<br>
-    IEEE Sensors Journal<br>
-    Journal of Medical Internet Research
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6046" style="color:black;">IEEE Transactions on Multimedia (IEEE T-MM)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76" style="color:black;">IEEE Transactions on Circuits and Systems for Video Technology (IEEE T-CSVT)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385" style="color:black;">IEEE Transactions on Neural Networks and Learning Systems (IEEE T-NNLS)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=42" style="color:black;">IEEE Transactions on Medical Imaging (IEEE T-MI)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9424" style="color:black;">IEEE Transactions on Industrial Informatics (IEEE T-II)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6221020" style="color:black;">IEEE Journal of Biomedical and Health Informatics (IEEE JBHI)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4200690" style="color:black;">IEEE Journal of Selected Topics in Signal Processing (IEEE J-STSP)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782706" style="color:black;">IEEE Open Journal of the Industrial Electronics Society (IEEE OJIES)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8782664" style="color:black;">IEEE Open Journal of the Computer Society (IEEE OJCS)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93" style="color:black;">IEEE MultiMedia (MM)</a><br>
+    <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361" style="color:black;">IEEE Sensors Journal</a><br>
+    <a href="https://www.jmir.org" style="color:black;">Journal of Medical Internet Research</a>
   </li>
   <li><strong>Conference Reviewer</strong> of<br>
-    The International Conference on Learning Representations (ICLR) 2025
+    <a href="https://iclr.cc" style="color:black;">The International Conference on Learning Representations (ICLR) 2025</a>
   </li>
-  <li><strong>Committee Member</strong> of Local Conference Committee, IEEE Boston Section</li>
-  <li><strong>Member</strong> of IEEE, ACM, ACL, AAAI, and AAAS</li>
+  <li><strong>Committee Member</strong> of<br>
+    <ul>
+      <li><a href="https://ieeeboston.org" style="color:black;">Local Conference Committee, IEEE Boston Section</a></li>
+      <li><a href="https://ieee-icad.org/?page_id=121" style="color:black;">Speaker Program Chair (Keynotes & Panel Sessions), <br>
+        2025 IEEE International Conference on AI and Data Analytics (ICAD)</a></li>
+    </ul>
+  </li>
+  
+  <li><strong>Member</strong> of <a href="https://www.ieee.org" style="color:black;">IEEE</a>, <a href="https://www.acm.org" style="color:black;">ACM</a>, <a href="https://www.aclweb.org/portal/what-is-cl" style="color:black;">ACL</a>, and <a href="https://aaai.org" style="color:black;">AAAI</a></li>
 </ol>
 
 <h2 id="Selected Awards">Selected Awards</h2>
