--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <div class="wrapper">
 <div class="navbar container">
   <a id="author-name" class="alignable pull-left" style="text-decoration:none">Shuyue Jia (Bruce)</a>
+  <a id="author-name" class="alignable pull-right" style="color:black;" href="https://brucejia.myportfolio.com">Photography</a>
 </div>
 <div style="clear:both"></div>
 
