--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v2"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Meagan V. Lauber, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
-    <br><em>medRxiv Preprint</em>
+    <br><em>Technical Report</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -542,7 +542,7 @@
       <a href="https://www.medrxiv.org/content/10.1101/2024.07.11.24310304v1"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div><br>
     <strong>Shuyue Jia</strong>, Subhrangshu Bit, Edward Searls, Lindsey A. Claus, Pengrui Fan, Varuna H. Jasodanand, Meagan V. Lauber, Divya Veerapaneni, William M. Wang, Rhoda Au, Vijaya B. Kolachalama
-    <br><em>medRxiv Preprint</em>
+    <br><em>Technical Report</em>
     <details>
       <summary style="outline:none">See More</summary>
       <ul>
@@ -727,7 +727,7 @@
       <a href="https://github.com/SuperBruceJia/EEG-DL"><i class="fa fa-github"></i> Codes</a>
       <a href="https://arxiv.org/pdf/2007.13484.pdf"><i class="fab fa fa-file-pdf-o"></i> Paper</a>
     </div>
-    <br><em>arXiv preprint arXiv:2007.13484</em>
+    <br><em>Technical Report</em>
   </li>
 
 </ol>
